[tool.poetry]
name = "create-login-page"
version = "0.1.0"
description = "Creating login page on Flask"
authors = ["Paul Marsh <61422343+PTMGitHub@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
