[tool.poetry]
name = "create-login-page"
version = "0.1.0"
description = "Creating login page on Flask"
authors = ["Paul Marsh <61422343+PTMGitHub@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
Werkzeug = "^2.0.2"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
